# rust-dkg-engine

./: .gitignore  .origintrail_noderc.toml.example  BLOCKCHAIN_EVENT_HANDLER_PLAN.md  Cargo.toml  rustfmt.toml
.cargo/: config.toml
crates/dkg-blockchain/: Cargo.toml
crates/dkg-blockchain/src/: config.rs  contract_events.rs  error.rs  error_classification.rs  lib.rs  multicall.rs  rpc_executor.rs  rpc_rate_limiter.rs  substrate.rs  utils.rs
crates/dkg-blockchain/src/chains/: mod.rs
crates/dkg-blockchain/src/chains/evm/: error_decode.rs  gas.rs  mod.rs  multicall.rs  provider.rs  wallets.rs
crates/dkg-blockchain/src/chains/evm/contracts/: chronos.rs  delegators_info.rs  hub.rs  identity_storage.rs  kc_storage.rs  mod.rs  multicall.rs  params.rs  paranet.rs  profile.rs  sharding.rs
crates/dkg-blockchain/src/manager/: cache.rs  claim_rewards.rs  contracts.rs  core.rs  events.rs  identity.rs  kc.rs  mod.rs  paranet.rs  random_sampling.rs  sharding.rs  staking.rs
crates/dkg-domain/: Cargo.toml
crates/dkg-domain/src/: address.rs  assertion.rs  blockchain_id.rs  kc.rs  lib.rs  paranet.rs  paranet_id.rs  signature.rs  token_ids.rs  ual.rs  validation.rs  visibility.rs
crates/dkg-key-value-store/: Cargo.toml
crates/dkg-key-value-store/src/: config.rs  error.rs  lib.rs  manager.rs  table.rs
crates/dkg-key-value-store/src/stores/: mod.rs  operation_result_store.rs  peer_address_store.rs  publish_tmp_dataset_store.rs
crates/dkg-network/: Cargo.toml
crates/dkg-network/src/: actions.rs  behaviour.rs  config.rs  error.rs  event_loop.rs  handle.rs  handler.rs  key_manager.rs  lib.rs  message.rs  pending_requests.rs  request_outcome.rs
crates/dkg-network/src/messages/: mod.rs  tests.rs
crates/dkg-network/src/protocols/: codec.rs  mod.rs  spec.rs
crates/dkg-network/src/protocols/batch_get/: messages.rs  mod.rs
crates/dkg-network/src/protocols/finality/: messages.rs  mod.rs
crates/dkg-network/src/protocols/get/: messages.rs  mod.rs
crates/dkg-network/src/protocols/store/: messages.rs  mod.rs
crates/dkg-repository/: Cargo.toml
crates/dkg-repository/src/: config.rs  config_error.rs  error.rs  lib.rs  manager.rs  observability.rs  types.rs
crates/dkg-repository/src/migrations/: m002_create_shard.rs  m003_create_blockchain.rs  m004_create_operations.rs  m007_create_finality_status.rs  m008_create_triples_insert_count.rs  m009_create_kc_sync_progress.rs  m010_create_kc_sync_queue.rs  m011_create_proof_challenge.rs  m012_create_paranet_kc_sync.rs  m013_add_next_retry_at_to_kc_sync_queue.rs  m014_create_kc_chain_metadata.rs  m017_create_kc_chain_core_metadata.rs  m018_create_kc_chain_state_metadata.rs  m019_create_kc_sync_metadata_cursor.rs  m020_create_kc_projection_state.rs  m021_drop_blockchain.rs  m022_enforce_kc_chain_core_metadata_non_null.rs  mod.rs
crates/dkg-repository/src/models/: blockchain.rs  finality_status.rs  kc_chain_core_metadata.rs  kc_chain_metadata.rs  kc_chain_state_metadata.rs  kc_projection_state.rs  kc_sync_metadata_cursor.rs  kc_sync_queue.rs  mod.rs  operations.rs  paranet_kc_sync.rs
crates/dkg-repository/src/repositories/: blockchain_repository.rs  finality_status_repository.rs  kc_chain_metadata_repository.rs  kc_projection_repository.rs  kc_sync_repository.rs  mod.rs  operation_repository.rs  paranet_kc_sync_repository.rs  proof_challenge_repository.rs  triples_insert_count_repository.rs
crates/dkg-triple-store/: Cargo.toml
crates/dkg-triple-store/src/: config.rs  error.rs  knowledge_asset.rs  knowledge_collection.rs  lib.rs  metadata.rs  metrics.rs  rdf.rs  sparql.rs
crates/dkg-triple-store/src/backend/: blazegraph.rs  mod.rs  oxigraph_backend.rs
crates/dkg-triple-store/src/query/: named_graphs.rs  predicates.rs  subjects.rs
crates/dkg-triple-store/src/tests/: integration_tests.rs  manager.rs
crates/dkg-triple-store/src/types/: mod.rs
managers/blockchain/: Cargo.toml  rust_out
managers/blockchain/src/: blockchain_creator.rs  error.rs  error_utils.rs  gas.rs  lib.rs  substrate.rs  utils.rs
managers/blockchain/src/blockchains/: abstract_blockchain.rs  blockchain_creator.rs  evm_chain.rs  hardhat.rs  mod.rs
managers/network/: Cargo.toml
managers/network/src/: action.rs  command.rs  error.rs  key_manager.rs  lib.rs  message.rs
managers/repository/: Cargo.toml
managers/repository/src/: error.rs  lib.rs
managers/repository/src/migrations/: m001_create_command.rs  m002_create_shard.rs  m003_create_blockchain.rs  m004_create_operation_ids.rs  m004_create_operations.rs  m005_create_operations_responses.rs  m006_create_signatures.rs  m20230922_180100_create_command.rs  m20230922_180100_create_shard.rs  mod.rs
managers/repository/src/models/: blockchain.rs  command.rs  commands.rs  finality_status.rs  mod.rs  operation_ids.rs  operation_responses.rs  operations.rs  shard.rs  signatures.rs
managers/repository/src/repositories/: blockchain_repository.rs  command_repository.rs  finality_status_repository.rs  mod.rs  operation_id_repository.rs  operation_repository.rs  shard_repository.rs  signature_repository.rs  triples_insert_count_repository.rs
managers/triple-store/: Cargo.toml
managers/triple-store/src/: config.rs  error.rs  lib.rs  rdf.rs
managers/triple-store/src/backend/: blazegraph.rs  mod.rs  oxigraph_backend.rs
managers/triple-store/src/query/: mod.rs  named_graphs.rs
managers/triple-store/src/types/: assertion.rs  knowledge_asset.rs  mod.rs  token_ids.rs  visibility.rs
managers/triple-store/tests/: integration_tests.rs
rdf-canonize/: Cargo.toml
rdf-canonize/src/: error.rs  identifier_issuer.rs  lib.rs  message_digest.rs  n_quad.rs  permuter.rs  urdna2015.rs
tools/local_network/: .node_config_template.toml  Cargo.toml  config.template.toml
tools/local_network/src/: cleanup.rs  config_gen.rs  constants.rs  keys.rs  launch.rs  local_blockchain.rs  main.rs  management_private_keys.json  private_keys.json  public_keys.json
tools/migrate-triple-store/: Cargo.toml
tools/migrate-triple-store/src/: main.rs
tools/query-probe/: Cargo.toml  README.md
tools/query-probe/src/: main.rs
(+772 files in other folders)
