[package]
name = "rust-dkg-engine"
version = "0.1.3"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
dkg-domain = { path = "crates/dkg-domain" }
dkg-blockchain = { path = "crates/dkg-blockchain" }
dkg-network = { path = "crates/dkg-network" }
dkg-repository = { path = "crates/dkg-repository" }
dkg-key-value-store = { path = "crates/dkg-key-value-store" }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "io-util",
    "signal",
] }
tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "grpc-tonic"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
tower_governor = "0.8"
governor = "0.10"
hyper = "1.8.1"
chrono = "0.4.43"
validator = { workspace = true }
validator_derive = { workspace = true }
figment = { version = "0.10", features = ["toml"] }
thiserror = { workspace = true }
libp2p = { workspace = true, features = [
    "macros",
    "kad",
    "identify",
    "request-response",
    "json",
    "noise",
    "tcp",
    "tokio",
    "rsa",
    "yamux",
] }
alloy = { workspace = true, features = [
    "std",
    "contract",
    "network",
    "providers",
    "provider-http",
    "provider-ws",
    "reqwest",
    "reqwest-rustls-tls",
    "rpc-client",
    "rpc-types",
    "signer-local",
    "sol-types",
] }
sha2 = "0.10"
subxt = "0.44.2"
jsonrpsee = { version = "0.24.10", default-features = false, features = [
    "http-client",
] }
url = "2.5.2"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
dashmap = "6.1.0"
async-trait = "0.1"
redb = "3.1.0"
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1.19"
void = "1.0.2"
oxigraph = { version = "0.5.4" }
rustls = { version = "0.23.36", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
unsigned-varint = { version = "0.8.0", features = ["futures"] }

clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3.24.0"

[patch.crates-io]
# Patch libp2p-identity to support 1024-bit RSA keys for legacy js-libp2p node compatibility
# See: https://github.com/libp2p/rust-libp2p/issues/5304
libp2p-identity = { path = "patches/libp2p-identity" }

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
used_underscore_binding = "warn"
pedantic = { level = "allow", priority = -1 }
type_complexity = "allow"
unnecessary_wraps = "warn"
manual_let_else = "warn"
dbg_macro = "warn"
unwrap_used = "warn"

[workspace]
members = [
    "tools/local_network",
    "crates/dkg-domain",
    "crates/dkg-network",
    "crates/dkg-blockchain",
    "crates/dkg-repository",
    "crates/dkg-key-value-store",
]
default-members = ["."]

[workspace.dependencies]
alloy = { version = "1.6.1", default-features = false }
clap = "4.5.57"
libp2p = "0.56.0"
reqwest = { version = "0.12.28", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
validator = "0.20.0"
validator_derive = "0.20.0"
