[package]
name = "rust-dkg-engine"
version = "0.1.13"
rust-version = "1.92.0"
edition = "2024"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
dkg-domain = { path = "crates/dkg-domain" }
dkg-blockchain = { path = "crates/dkg-blockchain" }
dkg-network = { path = "crates/dkg-network" }
dkg-repository = { path = "crates/dkg-repository" }
dkg-key-value-store = { path = "crates/dkg-key-value-store" }
dkg-triple-store = { path = "crates/dkg-triple-store" }
dkg-observability = { path = "crates/dkg-observability" }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "io-util",
    "signal",
] }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
metrics-exporter-prometheus = "0.17.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = "0.8.8"
tower = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
tower_governor = "0.8"
governor = "0.10"
chrono = { workspace = true }
validator = { workspace = true }
validator_derive = { workspace = true }
figment = { version = "0.10", features = ["toml"] }
thiserror = { workspace = true }
dashmap = "6.1.0"
rustls = { version = "0.23.36", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }

clap = { workspace = true, features = ["derive"] }
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[patch.crates-io]
# Patch libp2p-identity to support 1024-bit RSA keys for legacy js-libp2p node compatibility
# See: https://github.com/libp2p/rust-libp2p/issues/5304
libp2p-identity = { git = "https://github.com/zeroxbt/rust-libp2p.git", rev = "052053aeb029ab9781dcbb88f357b686333b7c15" }
# Patch oxigraph with configurable store open options for file descriptor control
oxigraph = { git = "https://github.com/zeroxbt/oxigraph.git", rev = "f90848c4779b28209f80b2f4e7c0b53d353398da" }


[lints]
workspace = true

[workspace]
members = [
    "tools/local_network",
    "crates/dkg-domain",
    "crates/dkg-network",
    "crates/dkg-blockchain",
    "crates/dkg-repository",
    "crates/dkg-key-value-store",
    "crates/dkg-triple-store",
    "crates/dkg-observability",
]
default-members = ["."]

[workspace.dependencies]
alloy = { version = "1.6.1", default-features = false }
clap = "4.5.57"
reqwest = { version = "0.12.28", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
validator = "0.20.0"
validator_derive = "0.20.0"

# Centralized versions for deps used across 2+ crates
async-trait = "0.1"
chrono = "0.4.43"
futures = "0.3.31"
tempfile = "3.24.0"
tokio-util = { version = "0.7", features = ["time"] }
tower = "0.5.3"
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["serde", "v4"] }

[workspace.lints.clippy]
used_underscore_binding = "warn"
pedantic = { level = "allow", priority = -1 }
type_complexity = "allow"
unnecessary_wraps = "warn"
manual_let_else = "warn"
dbg_macro = "warn"
unwrap_used = "warn"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
