[package]
name = "rdf-canonize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
hex = "0.4.3"
regex= "1.9.6"
lazy_static = "1.4.0"
tokio = {version = "1.32.0", features = ["full"]}
async-recursion = "1.0.5"