[package]
name = "rdf-canonize"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
thiserror.workspace = true
regex = "1.10.4"
lazy_static = "1.4.0"
async-recursion = "1.1.0"
