[package]
name = "rdf-canonize"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers.workspace = true
tokio.workspace = true
thiserror.workspace = true
regex = "1.12.2"
lazy_static = "1.5.0"
async-recursion = "1.1.1"
