[package]
name = "dkg-blockchain"
version = "0.1.22"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
dkg-domain = { path = "../dkg-domain" }
dkg-observability = { path = "../dkg-observability" }
alloy = { workspace = true, features = [
    "std",
    "contract",
    "network",
    "providers",
    "provider-http",
    "provider-ws",
    "reqwest",
    "reqwest-rustls-tls",
    "rpc-client",
    "rpc-types",
    "signer-local",
    "sol-types",
] }
futures = { workspace = true }
jsonrpsee = { version = "0.24.10", default-features = false, features = [
    "http-client",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
subxt = { version = "0.44.2", default-features = false, features = [
    "jsonrpsee",
    "native",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tower = { workspace = true }
governor = "0.10"
url = "2.5.2"

[lints]
workspace = true
