[package]
name = "dkg-domain"
version = "0.1.0"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
validator = "0.20.0"
validator_derive = "0.20.0"
alloy = { version = "1.6.1", default-features = false, features = ["std", "sol-types"] }
thiserror = "2.0.18"
