[package]
name = "dkg-domain"
version = "0.1.0"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
validator = { workspace = true }
validator_derive = { workspace = true }
alloy = { workspace = true, features = ["std", "sol-types"] }
thiserror = { workspace = true }
