[package]
name = "dkg-key-value-store"
version = "0.1.0"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
dkg-domain = { path = "../dkg-domain" }
redb = "3.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "io-util", "rt"] }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.24.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "rt"] }
