[package]
name = "dkg-key-value-store"
version = "0.1.11"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
dkg-domain = { path = "../dkg-domain" }
redb = "3.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "io-util", "rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "rt"] }

[lints]
workspace = true
