[package]
name = "dkg-network"
version = "0.1.18"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
dkg-domain = { path = "../dkg-domain" }
dkg-observability = { path = "../dkg-observability" }
async-trait = { workspace = true }
futures = { workspace = true }
libp2p = { version = "0.56.0", features = [
    "macros",
    "kad",
    "identify",
    "request-response",
    "json",
    "noise",
    "tcp",
    "tokio",
    "rsa",
    "yamux",
] }
libp2p-mplex = "0.43.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "io-util", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
unsigned-varint = { version = "0.8.0", features = ["futures"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }

[lints]
workspace = true
