[package]
name = "dkg-repository"
version = "0.1.0"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
