[package]
name = "dkg-repository"
version = "0.1.18"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1.19"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
