[package]
name = "dkg-triple-store"
version = "0.1.9"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dkg-domain = { path = "../dkg-domain" }
dkg-observability = { path = "../dkg-observability" }
oxigraph = { version = "0.5.4" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "rt", "time"] }

[lints]
workspace = true
