[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
ethers = { version = "2.0.10", features = ["openssl", "ws"]}
serde = "1.0.188"
async-trait = "0.1.73"
tracing = "0.1.37"
thiserror = "1.0.49"
hex = "0.4.3"