[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
ethers.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
async-trait.workspace = true  # Required for AbstractBlockchain trait (used with trait objects)
