[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
rsa = "0.9.10"
ed25519-dalek = { version = "2.2.0", optional = true }
rand = "0.9.2"
libp2p = { version = "0.56.0", features = [
    "tokio",
    "dns",
    "macros",
    "noise",
    "ping",
    "tcp",
    "websocket",
    "yamux",
    "rsa",
    "json",
    "request-response",
    "kad",
    "identify",
] }
libp2p-mplex = "0.43.1"
void = "1.0.2"
base64 = "0.22.1"
