[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
libp2p = { version = "0.56.0", features = [
    "tokio",
    "macros",
    "noise",
    "tcp",
    "yamux",
    "rsa",
    "json",
    "request-response",
    "kad",
    "identify",
] }
libp2p-mplex = "0.43.1"
void = "1.0.2"
