[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sea-orm = { version = "0.12.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "0.12.3"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"