[package]
name = "repository"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = "1.1.19"
