[package]
name = "triple-store"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait = "0.1"
oxigraph = "0.5.3"

[dev-dependencies]
uuid.workspace = true
