[package]
name = "triple-store"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
# Enable RocksDB persistence for oxigraph (adds ~117s to compile time)
# Use for production builds: cargo build --release --features persistence
persistence = ["oxigraph/default"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait = "0.1"
# In-memory only by default (fast compile), enable "persistence" feature for RocksDB
oxigraph = { version = "0.5.3", default-features = false }
validator.workspace = true
validator_derive.workspace = true

[dev-dependencies]
uuid.workspace = true
