[package]
name = "local_network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8.23"
alloy = { workspace = true, features = [
    "std",
    "contract",
    "providers",
    "provider-http",
    "reqwest",
    "signer-local",
    "sol-types",
] }
libp2p = { workspace = true }
clap = { workspace = true }
