[package]
name = "local_network"
version.workspace = true
edition = "2024"

[dependencies]
dkg-network = { path = "../../crates/dkg-network" }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8.23"
alloy = { workspace = true, features = [
    "std",
    "contract",
    "providers",
    "provider-http",
    "reqwest",
    "signer-local",
    "sol-types",
] }
clap = { workspace = true }

[lints]
workspace = true
