[package]
name = "query-probe"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dkg-triple-store = { path = "../../crates/dkg-triple-store" }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }
oxigraph = { version = "0.5.4" }

[patch.crates-io]
oxigraph = { git = "https://github.com/zeroxbt/oxigraph.git", rev = "bbe9e6c65c272a28e4f466cf159496c1e818e963" }

# Keep this crate standalone so it can be built/run without changing workspace membership.
[workspace]
